Fix long non-break label overflows to the input

--- a/assets/sass/editor/_field.scss
+++ b/assets/sass/editor/_field.scss
@@ -16,6 +16,11 @@
 		outline: 1px solid var(--color-primary) !important; // Override the outline when hovering above
 		z-index: 2; // Make sure the outline show above the group title (which has z-index: 1)
 	}
+
+	&__label {
+		font-weight: 700;
+		word-break: break-all;
+	}
 }
 
 // Map
